--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <h1>hello world!</h1>
 
-    <script src="js/script.js"></script>
+    <script src="js/script-1.js"></script>
+    <script src="js/script-2.js"></script>
 </body>
 </html>
