--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
     <h1>hello world!</h1>
 
-    <script src="js/script-1.js"></script>
-    <script src="js/script-2.js"></script>
+    <!-- <script src="js/script-1.js"></script>
+    <script src="js/script-2.js"></script> -->
+    <script src="js/script-3.js"></script>
 </body>
 </html>
